--- a/index.html
+++ b/index.html
@@ -5,115 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Matthew Ganucheau</title>
-  <meta name="description" content="Matthew Ganucheau's Profile Page">
-  <meta name="keywords" content="">
+  <meta name="description" content="Personal homepage for Matthew Ganucheau – Manager, Educator, and Artist bridging art and technology through design and leadership.">
+  <meta name="keywords" content="Matthew Ganucheau, project manager, educator, artist, UX, design, technology">
   <meta name="author" content="Matthew Ganucheau">
-<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/> 
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Matthew Ganucheau">
+  <meta property="og:description" content="Manager, Educator, and Artist bridging art and technology through design and leadership.">
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/192019?v=4">
+  <meta property="og:url" content="https://ganucheau.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
 </head>
 
-<body class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover" style="background-image:url('https://images.unsplash.com/photo-1545431619-92b140e1d334?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
-  <div class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
-    
-	<!--Main Col-->
-	<div id="profile" class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
-		<div class="p-4 md:p-12 text-center lg:text-left">
-			<!-- Image for mobile view-->
-			<div class="block lg:hidden rounded-full shadow-xl mx-auto h-48 w-48 bg-cover bg-center" style="background-image: url('https://avatars.githubusercontent.com/u/192019?v=4')"></div>
-			<h1 class="text-3xl font-bold pt-8 lg:pt-0">Matthew Ganucheau</h1>
-			<div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
-			<p class="pt-4 text-base font-bold flex items-center justify-center lg:justify-start">Manager • Educator • Artist </p>
-			<p class="pt-8 text-normal">Passionate about bridging art and technology. I lead cross-functional teams, design immersive experiences, and build tools that empower learning and creativity.</p>
-<div class="flex gap-6 pt-10 justify-center lg:justify-start">
+<body class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover" style="background-image:url('images/bg.avif');">
+  <main class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
 
-  <a href="mailto:matthew@ganucheau.com" title="Email" class="group transition">
-    <svg class="w-6 h-6 text-gray-600 group-hover:text-red-600 transition" fill="currentColor" stroke="none" viewBox="0 0 24 24">
-      <path d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4zM20,6v0.01L12,13L4,6.01V6H20zM4,18V8.99l8,6l8-6V18H4z"/>
-    </svg>
-  </a>
+    <!-- Profile Section -->
+    <section id="profile" class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-90 mx-6 lg:mx-0">
+      <div class="p-4 md:p-12 text-center lg:text-left">
+        <!-- Mobile Image -->
+        <div class="block lg:hidden rounded-full shadow-xl mx-auto h-48 w-48 bg-cover bg-center" style="background-image: url('https://avatars.githubusercontent.com/u/192019?v=4')"></div>
+        <h1 class="text-3xl font-bold pt-8 lg:pt-0">Matthew Ganucheau</h1>
+        <div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
+        <p class="pt-4 text-base font-bold flex items-center justify-center lg:justify-start">Manager • Educator • Artist</p>
+        <p class="pt-8 text-normal">Passionate about bridging art and technology. I lead cross-functional teams, design immersive experiences, and build tools that empower learning and creativity.</p>
 
-  <a href="https://linkedin.com/in/mganucheau" title="LinkedIn" class="group transition">
-    <svg class="w-6 h-6 text-gray-600 group-hover:text-blue-700 transition" fill="currentColor" stroke="none" viewBox="0 0 24 24">
-      <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8h5v16H0V8zm7.5 0H12v2.25h.09c.62-1.17 2.13-2.4 4.41-2.4C22.17 7.85 24 10.01 24 14.43V24h-5V15c0-2.27-.81-3.81-2.84-3.81-1.55 0-2.47 1.04-2.88 2.04-.15.37-.19.88-.19 1.39V24H7.5V8z"/>
-    </svg>
-  </a>
+        <!-- Social Icons -->
+        <div class="flex gap-6 pt-10 justify-center lg:justify-start" aria-label="Social Links">
+          <!-- Repeatable Icon Pattern -->
+          <a href="mailto:matthew@ganucheau.com" title="Email" aria-label="Email" class="group transition">
+            <svg class="w-6 h-6 text-gray-600 group-hover:text-red-600 transition" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4zM20,6v0.01L12,13L4,6.01V6H20zM4,18V8.99l8,6l8-6V18H4z"/>
+            </svg>
+          </a>
+          <a href="https://linkedin.com/in/mganucheau" title="LinkedIn" aria-label="LinkedIn" class="group transition">
+            <svg class="w-6 h-6 text-gray-600 group-hover:text-blue-700 transition" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8h5v16H0V8zm7.5 0H12v2.25h.09c.62-1.17 2.13-2.4 4.41-2.4C22.17 7.85 24 10.01 24 14.43V24h-5V15c0-2.27-.81-3.81-2.84-3.81-1.55 0-2.47 1.04-2.88 2.04-.15.37-.19.88-.19 1.39V24H7.5V8z"/>
+            </svg>
+          </a>
+          <a href="https://ganucheau.substack.com" title="Substack" aria-label="Substack" class="group transition">
+            <svg class="w-6 h-6 text-gray-600 group-hover:text-orange-500 transition" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M3 3h18v4H3zm0 6h18v12H3z" />
+            </svg>
+          </a>
+          <a href="https://ganucheau.bandcamp.com" title="Bandcamp" aria-label="Bandcamp" class="group transition">
+            <svg class="w-6 h-6 text-gray-600 group-hover:text-green-700 transition" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M22.548 2H1.452L9.5 22h13.048z"/>
+            </svg>
+          </a>
+          <a href="https://open.spotify.com/user/ganucheau" title="Spotify" aria-label="Spotify" class="group transition">
+            <svg class="w-6 h-6 text-gray-600 group-hover:text-green-500 transition" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M12.005.001a12 12 0 100 24.001 12 12 0 000-24zm5.216 17.361a.747.747 0 01-1.026.263c-2.807-1.722-6.347-2.111-10.522-1.165a.75.75 0 11-.33-1.461c4.622-1.045 8.603-.592 11.75 1.364.358.22.47.69.128.999zm1.46-3.186a.937.937 0 01-1.284.33c-3.212-1.97-8.111-2.547-11.9-1.404a.937.937 0 11-.544-1.8c4.364-1.32 9.807-.672 13.59 1.569.448.273.593.86.138 1.305zm.14-3.208C15.843 8.22 8.946 8.13 5.64 9.072a1.126 1.126 0 01-.634-2.162c3.93-1.15 11.505-1.039 15.793 1.762a1.127 1.127 0 01-1.178 1.954z"/>
+            </svg>
+          </a>
+          <a href="https://github.com/ganucheau" title="GitHub" aria-label="GitHub" class="group transition">
+            <svg class="w-6 h-6 text-gray-600 group-hover:text-black transition" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M12 .5C5.64.5.5 5.66.5 12.17c0 5.18 3.34 9.59 7.97 11.14.58.11.79-.26.79-.56v-2.06c-3.25.72-3.92-1.55-3.92-1.55-.53-1.35-1.28-1.71-1.28-1.71-1.04-.72.08-.7.08-.7 1.14.08 1.74 1.2 1.74 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.75.4-1.26.72-1.55-2.6-.3-5.34-1.33-5.34-5.94 0-1.31.47-2.38 1.23-3.22-.12-.3-.54-1.5.1-3.12 0 0 1-.32 3.3 1.22.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.3-1.54 3.3-1.22 3.3-1.22.64 1.62.22 2.82.1 3.12.77.84 1.23 1.91 1.23 3.22 0 4.62-2.75 5.63-5.37 5.93.42.36.81 1.08.81 2.17v3.22c0 .31.21.68.8.56 4.63-1.55 7.97-5.96 7.97-11.14C23.5 5.66 18.36.5 12 .5z"/>
+            </svg>
+          </a>
+        </div>
 
-  <a href="https://ganucheau.substack.com" title="Substack" class="group transition">
-    <svg class="w-6 h-6 text-gray-600 group-hover:text-orange-500 transition" fill="currentColor" stroke="none" viewBox="0 0 24 24">
-      <path d="M3 3h18v4H3zm0 6h18v12H3z" />
-    </svg>
-  </a>
+      </div>
+    </section>
 
-  <a href="https://ganucheau.bandcamp.com" title="Bandcamp" class="group transition">
-    <svg class="w-6 h-6 text-gray-600 group-hover:text-green-700 transition" fill="currentColor" stroke="none" viewBox="0 0 24 24">
-      <path d="M22.548 2H1.452L9.5 22h13.048z"/>
-    </svg>
-  </a>
-
-  <a href="https://open.spotify.com/user/ganucheau" title="Spotify" class="group transition">
-    <svg class="w-6 h-6 text-gray-600 group-hover:text-green-500 transition" fill="currentColor" stroke="none" viewBox="0 0 24 24">
-      <path d="M12.005.001a12 12 0 100 24.001 12 12 0 000-24zm5.216 17.361a.747.747 0 01-1.026.263c-2.807-1.722-6.347-2.111-10.522-1.165a.75.75 0 11-.33-1.461c4.622-1.045 8.603-.592 11.75 1.364.358.22.47.69.128.999zm1.46-3.186a.937.937 0 01-1.284.33c-3.212-1.97-8.111-2.547-11.9-1.404a.937.937 0 11-.544-1.8c4.364-1.32 9.807-.672 13.59 1.569.448.273.593.86.138 1.305zm.14-3.208C15.843 8.22 8.946 8.13 5.64 9.072a1.126 1.126 0 01-.634-2.162c3.93-1.15 11.505-1.039 15.793 1.762a1.127 1.127 0 01-1.178 1.954z"/>
-    </svg>
-  </a>
-
-  <a href="https://github.com/ganucheau" title="GitHub" class="group transition">
-    <svg class="w-6 h-6 text-gray-600 group-hover:text-black transition" fill="currentColor" stroke="none" viewBox="0 0 24 24">
-      <path d="M12 .5C5.64.5.5 5.66.5 12.17c0 5.18 3.34 9.59 7.97 11.14.58.11.79-.26.79-.56v-2.06c-3.25.72-3.92-1.55-3.92-1.55-.53-1.35-1.28-1.71-1.28-1.71-1.04-.72.08-.7.08-.7 1.14.08 1.74 1.2 1.74 1.2 1.03 1.77 2.7 1.26 3.36.96.1-.75.4-1.26.72-1.55-2.6-.3-5.34-1.33-5.34-5.94 0-1.31.47-2.38 1.23-3.22-.12-.3-.54-1.5.1-3.12 0 0 1-.32 3.3 1.22.96-.27 1.98-.4 3-.4s2.04.13 3 .4c2.3-1.54 3.3-1.22 3.3-1.22.64 1.62.22 2.82.1 3.12.77.84 1.23 1.91 1.23 3.22 0 4.62-2.75 5.63-5.37 5.93.42.36.81 1.08.81 2.17v3.22c0 .31.21.68.8.56 4.63-1.55 7.97-5.96 7.97-11.14C23.5 5.66 18.36.5 12 .5z"/>
-    </svg>
-  </a>
-
-</div>
-
-		</div>
-
-	</div>
-	
-	<!--Img Col-->
-	<div class="w-full lg:w-2/5">
-		<!-- Big profile image for side bar (desktop) -->
-		<img src="https://ganucheau.com/images/matt.png" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">		
-	</div>
-	
-	<!-- Pin to top right corner -->
-<!-- 	  <div class="absolute top-0 right-0 h-12 w-18 p-4">
-		<button class="js-change-theme focus:outline-none">🌙</button>
-	  </div> -->
-</div>
-
-	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
-	<script src="https://unpkg.com/tippy.js@4"></script>
-	<script>
-		//Init tooltips
-		tippy('.link',{
-		  placement: 'bottom'
-		})
-
-		//Toggle mode
-		const toggle = document.querySelector('.js-change-theme');
-		const body = document.querySelector('body');
-		const profile = document.getElementById('profile');
-		
-		toggle.addEventListener('click', () => {
-
-		  if (body.classList.contains('text-gray-900')) {
-			toggle.innerHTML = "☀️";
-			body.classList.remove('text-gray-900');
-			body.classList.add('text-gray-100');
-			profile.classList.remove('bg-white');
-			profile.classList.add('bg-gray-900');
-		  } else
-		  {
-			toggle.innerHTML = "🌙";
-			body.classList.remove('text-gray-100');
-			body.classList.add('text-gray-900');
-			profile.classList.remove('bg-gray-900');			
-			profile.classList.add('bg-white');
-			
-		  }
-		});
-		
-    </script>
-	
+    <!-- Image Section for Desktop -->
+    <aside class="w-full lg:w-2/5">
+      <img src="images/matt.png" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block" alt="Matthew Ganucheau portrait">
+    </aside>
+  </main>
 </body>
-
 </html>
